--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,8 +9,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="96x96" href=".t/img/favicon.png">
-  <meta name="author" content="Holger Koenemann">
-  <meta name="generator" content="Eleventy v2.0.0">
   <meta name="HandheldFriendly" content="true">
   <title>Journal</title>
   <link rel="stylesheet" href="./css/theme.min.css">
@@ -144,13 +142,4 @@
 </div>
 
     </main>
-
-    <footer>
-  <div class="container text-center small py-vh-3">Made by
-    <a href="https://templatedeck.com" class="link-fancy" target="_blank">templatedeck.com</a>
-  </div>
-  <script src="js/bootstrap.bundle.min.js"></script>
-</footer>
-
-  </body>
-</html>
+  {% include 'footer.html' %}
