GSC and Allowed Hosts

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="96x96" href=".t/img/favicon.png">
   <meta name="HandheldFriendly" content="true">
+  <meta name="google-site-verification" content="6TlM8T0NZ26yMZwC6hGjw5x7u53-CnGoNaWF70Fp5ws" />
   <title>{% block title %}Dido Grigorov - AI Engineer | Machine Learning Engineer | Software Developer {% endblock %}</title>
   <link rel="stylesheet" href="{% static '/css/theme.css' %}">
 
