Change in resources

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="google-site-verification" content="6TlM8T0NZ26yMZwC6hGjw5x7u53-CnGoNaWF70Fp5ws" />
   <title>{% block title %}Dido Grigorov - AI Engineer | Machine Learning Engineer | Software Developer {% endblock %}</title>
-  <link rel="stylesheet" href="{% static '/css/theme.css' %}">
+  <link rel="stylesheet" href="{% static 'css/theme.css' %}">
 
 <style>
 /* inter-300 - latin */
