--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-
+{% block title %}About Dido Grigorov - My Life Journey{% endblock %}
+{% block canonical %}<link rel="canonical" href="https://didogrigorov.me/about/" />{% endblock %}
 {% block content %}
     <main>
       <div class="container">
