--- a/templates/contact-success.html
+++ b/templates/contact-success.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Thanks For Contacting Me - Dido Grigorov{% endblock %}
 {% block content %}
     <main>
       <div class="container">
