--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-
+{% block title %}Contact Me or Find Me on LinkedIn - Dido Grigorov{% endblock %}
+{% block canonical %}<link rel="canonical" href="https://didogrigorov.me/contact/" />{% endblock %}
 {% block content %}
     <main>
       <div class="container">
