Minified CSS and JS resources.

--- a/templates/base.html
+++ b/templates/base.html
@@ -120,8 +120,8 @@
     </g>
 </svg><a href="https://www.python.org/" class="link-fancy move-right" target="_blank" rel="nofollow">Python</a>
   </div>
-    <link rel="stylesheet" href="{% static 'css/theme.css' %}">
-  <script src="{% static 'js/bootstrap.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/theme.min.css' %}">
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </footer>
   </body>
 </html>
