--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Contact Me or Find Me on LinkedIn - Dido Grigorov{% endblock %}
 {% block canonical %}<link rel="canonical" href="https://didogrigorov.me/contact/" />{% endblock %}
 {% block content %}
