Changes to html files

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block title %}Contact Me or Find Me on LinkedIn - Dido Grigorov{% endblock %}
 {% block canonical %}<link rel="canonical" href="https://didogrigorov.me/contact/" />{% endblock %}
+{% block styling %}<link rel="stylesheet" href="{% static 'css/theme.min.css' %}">{% endblock %}
 {% block content %}
-    <link rel="stylesheet" href="{% static 'css/theme.min.css' %}">
-                         
+
     <main>
       <div class="container">
   <div class="row d-flex justify-content-center">
