--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
     </g>
 </svg><a href="https://www.python.org/" class="link-fancy move-right" target="_blank" rel="nofollow">Python</a>
   </div>
-    <link rel="stylesheet" href="{% static 'css/theme.min.css' %}">
+    {% block styling %}<link rel="stylesheet" href="{% static 'css/theme.min.css' %}">{% endblock %}
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </footer>
   </body>
