Changes to html files - 2

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Contact Me or Find Me on LinkedIn - Dido Grigorov{% endblock %}
 {% block canonical %}<link rel="canonical" href="https://didogrigorov.me/contact/" />{% endblock %}
-{% block styling %}<link rel="stylesheet" href="{% static 'css/theme.min.css' %}">{% endblock %}
+{% block styling %}<link rel="stylesheet" href="{% static 'css/theme.css' %}">{% endblock %}
 {% block content %}
 
     <main>
